Expose xml attribute to allow user set if avatar should be shown in one on one conversation

--- a/layer-atlas/src/main/res/values/atlas-attrs.xml
+++ b/layer-atlas/src/main/res/values/atlas-attrs.xml
@@ -64,6 +64,7 @@
         <attr name="theirTextSize" />
         <attr name="theirTextTypeface" />
         <attr name="theirTextStyle" />
+        <attr name="shouldShowAvatar" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="AtlasAddressBar">
