Change ShouldShowAvatarInOnOnOneConversations default to be false

--- a/layer-atlas/src/main/res/values/atlas-attrs.xml
+++ b/layer-atlas/src/main/res/values/atlas-attrs.xml
@@ -64,7 +64,7 @@
         <attr name="theirTextSize" />
         <attr name="theirTextTypeface" />
         <attr name="theirTextStyle" />
-        <attr name="shouldShowAvatar" format="boolean" />
+        <attr name="setShouldShowAvatarsInOneOnOneConversations" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="AtlasAddressBar">
